# rantools-v2

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  INSTALLATION.md  Makefile  README.md  celerybeat-schedule.db  conftest.py  docker-compose.yml  dump.rdb  entrypoint.sh  manage.py  pyproject.toml  setup.cfg
.github/workflows/: CI.yml
bts_files/: apps.py  urls.py  views.py
bts_files/services/: excel.py  filter_cells.py  main.py  nemo_nbf.py  utils.py
bts_files/tests/: test_views.py
bts_info/: apps.py  forms.py  urls.py  views.py
bts_info/services/: handler.py  main.py  sector_polygons.py
bts_info/tests/: test_views.py
config/: celery.py  context_processors.py  redis.py  settings.py  urls.py  views.py  wsgi.py
config/templatetags/: custom_filters.py
day_x/: apps.py  tasks.py  urls.py  views.py
day_x/services/: main.py  reports.py  sql.py
enm_api/: apps.py  serializers.py  urls.py  views.py
enm_api/templates/: com.xml  create_object_com.txt  create_object_cpp.txt
enm_api/tests/: conftest.py  test_create_object.py
enm_bulk_config/: apps.py  urls.py  views.py
enm_bulk_config/services/: edf.py  enm.py  files.py  main.py  network_live.py  parameters.py  templates.py
hw_info/: apps.py  forms.py  urls.py  views.py
hw_info/services/: excel.py  select.py  site_hw.py
local_lib/: enm_client_scripting-1.22.2-py2.py3-none-any.whl
maps/akmola-obl/: akmola-obl.dbf  akmola-obl.shp  akmola-obl.shx
maps/aktobe-obl/: aktobe-obl.dbf  aktobe-obl.shp  aktobe-obl.shx
maps/almaty-city/: almaty-city.dbf  almaty-city.shp  almaty-city.shx
maps/almaty-obl/: almaty-obl.dbf  almaty-obl.shp  almaty-obl.shx
maps/astana-city/: astana-city.dbf  astana-city.shp  astana-city.shx
maps/atyrau-obl/: atyrau-obl.dbf  atyrau-obl.shp  atyrau-obl.shx
maps/karaganda-obl/: karaganda-obl.dbf  karaganda-obl.shp  karaganda-obl.shx
maps/kazmin/: Kazmin-polygon.dbf  Kazmin-polygon.shp  Kazmin-polygon.shx
maps/kostanay-obl/: kostanay-obl.dbf  kostanay-obl.shp  kostanay-obl.shx
maps/kyzylorda-obl/: kyzylorda-obl.dbf  kyzylorda-obl.shp  kyzylorda-obl.shx
maps/mangystau-obl/: log.txt  mangystau-obl-polygon.dbf  mangystau-obl-polygon.shp  mangystau-obl-polygon.shx
maps/pavlodar-obl/: pavlodar-obl.dbf  pavlodar-obl.shp  pavlodar-obl.shx
maps/sko/: sko.dbf  sko.shp  sko.shx
maps/uko/: uko.dbf  uko.shp  uko.shx
maps/vko/: vko.dbf  vko.shp  vko.shx
maps/zhambyl-obl/: zhambyl-obl.dbf  zhambyl-obl.shp  zhambyl-obl.shx
maps/zko/: zko-polygon.dbf  zko-polygon.shp  zko-polygon.shx
neighbors/: apps.py  forms.py  urls.py  views.py
neighbors/services/: date_time.py  excel.py  utils.py
neighbors/tests/: conftest.py  utils.py
network_live/: apps.py  forms.py  kcell_cells.xlsx  urls.py  views.py
network_live_app/: apps.py  urls.py  views.py
network_vs_atoll/: apps.py  urls.py  views.py
nginx/: nginx.conf
retsubunit/: apps.py  forms.py  urls.py  views.py
services/: technologies.py
services/db/: connector.py  (+2 more)
sites_count/: apps.py  forms.py  migrate.py  models.py  tasks.py  tests.py  urls.py  views.py
templates/: base.html  index.html
tests/: test_views_with_access_mixins.py
toa_submit/: apps.py  forms.py  urls.py  views.py
tr_data/: apps.py  forms.py  models.py  tasks.py  urls.py  views.py
users/: apps.py  forms.py  ldap_authentication.py  signals.py  urls.py  views.py
(+204 files in other folders)
