[tool.poetry]
name = "rantools"
version = "0.1.0"
description = "Web applications for facilitating the work of the radio planning and optimization team"
authors = ["Ramil Albakov <ramil.albakov2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
django = "4.2.8"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.3"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2023.10"
ldap3 = "^2.9.1"
django-extensions = "^3.2.3"
cx-oracle = "^8.3.0"
openpyxl = "^3.1.2"
enm-client-scripting = {path = "local_packages/enm_client_scripting-1.22.2-py2.py3-none-any.whl"}
mypy = "^1.9.0"
djangorestframework = "^3.15.0"
drf-spectacular = "^0.27.2"
oracledb = "^2.2.1"
geopandas = "0.12.2"
geopy = "^2.4.1"
celery = "^5.4.0"
redis = "^5.2.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = "tests.py test_*.py *_tests.py"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.18.0"
pytest-django = "^4.7.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
